# Dart-AE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STRUCTURE.md  VERSION
benchmarks/: dart_benchmark.cu
examples/: dart_example.cpp
hw_small/verif/scripts/: generate_traces.sh
include/: batch_overlapper.hpp  circuit.hpp  critical_path.hpp  execution_manager.hpp  hash_table.hpp  runtime_manager.hpp  state_reconstructor.hpp  stimulus_merger.hpp  topological_analyzer.hpp  utils.hpp
include/dart/: dag_analyzer.hpp  dart_config.hpp  execution_manager.hpp  fingerprint_matcher.hpp
scripts/: build.sh  run_experiment.sh
src/: batch_overlapper.cu  critical_path.cpp  dag_analyzer.cpp  fingerprint.cu  hash_table.cu  runtime_manager.cpp  state_reconstructor.cu  stimulus_merger.cu  topological_analyzer.cpp  utils.cpp  warp_reorganizer.cu
src/dart/dag_analysis/: dag_analyzer.cpp
src/dart/execution_mgmt/: warp_reorganizer.cu
src/dart/matching_engine/: fingerprint.cu
tests/: quick_convergence_test.cu
